# ai-video-studio

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  novels.py  video.py
app/core/: __init__.py  assistant.py  llm.py  prompts.py
app/db/: __init__.py  repository.py
app/services/: __init__.py
docs/: DB_TABLES.md  HANDOFF.md  MODEL_PRICING.md  NOVEL_CONTEXT_DESIGN.md  OPTIMIZATION_REPORT.md  schema.sql
examples/: demo.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: AmbientBg.vue  CharacterDialog.vue  (+12 more)
legacy/: desktop_app.py  logging_config.py  models_init.py
legacy/agents/: __init__.py  director.py  novelist.py  storyboard.py  videographer.py
legacy/cli/: app.py  prod.py
legacy/core/: __init__.py  prompts.py
legacy/db/: novel_repository.py  studio_db.py
legacy/desktop/: novelist.py  novelist_qt.py  prompts.py  theme.py  utils.py
legacy/tools/: composer.py
legacy/web/: main.py
src/agents/: director.py  novelist.py  reviewer.py  storyboard.py  videographer.py
src/cli/: app.py  novelist.py  prod.py
src/context/: bible.py  builder.py
src/db/: novel_repository.py  repository.py  schema.py  session_store.py
src/desktop/: novelist_qt.py
src/models/: __init__.py  llm_client.py
src/pipeline/: pipeline.py
src/tools/: ffmpeg_composer.py  video_api.py
src/web/: app.py
src/workflow/: engine.py
workflows/: standard.yml
(+21 files in other folders)
