[project]
name = "ai-video-studio"
version = "3.0.0"
description = "AI驱动的长篇小说创作助手 + 视频制作管线 — 前后端解耦架构"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "pj-mmsn"},
]
keywords = ["ai", "novel", "video", "deepseek", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
web = ["PyQt5>=5.15.0", "pywebview>=5.0"]
video = ["moviepy>=1.0.3"]
tts = ["edge-tts>=6.1.0"]
dev = ["rich>=13.0.0"]

[project.scripts]
ai-novelist = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*", "legacy*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
